@@ -219,7 +219,7 @@ public class AuthController {
             String[] pair = param.split("=");
             if (pair.length == 2 && paramName.equals(pair[0])) {
                 try {
-                    return java.net.URLDecoder.decode(pair[1], java.nio.charset.StandardCharsets.UTF_8);
+                    return java.net.URLDecoder.decode(pair[1], "UTF-8");
                 } catch (Exception e) {
                     return pair[1];
                 }
@@ -229,7 +229,7 @@ public class AuthController {
     }
 
     // 内部类用于JSON反序列化
-    static class LoginRequest {
+    public static class LoginRequest {
         public String username;
         public String password;
     }
